# comparative-legislative-data

./: .gitignore  CITATION.cff  LICENSE  README.md
PeerReview/: PR2.md  PR3.md  PR4.md  PR5.md  peer_review_commission.md
Playgroundresearch/: R1.md  R2.md  R3.md
archive/PeerReview/: PEER_REVIEW_INVITATION.md  PR1.md
backend/: pyproject.toml
backend/app/cli/: audit_engine.py
backend/app/core/: provenance.py
backend/app/db/: schema.sql
backend/app/ingestion/: scottish_parliament.py  uk_parliament.py
backend/app/models/: audit_blueprint.py  bill.py
backend/tests/: test_bill_schema.py  test_parity_reproducibility.py  test_scottish_parliament.py  test_uk_parliament.py
docs/: API.md  ARCHITECTURE.md  CANONICAL_CATALOG.md  METHODOLOGY.md  MONITORING.md  TECHNICAL_DEBT.md  canonical_variable_catalog.md  ops.md  parliament_and_data_mapping.md  peer_review_commission.md  pilot.md  schema.md  stack.md
docs/PAPER_SERIES/: WP01_interactive_data_playground_concept.md
docs/audits/: GB-SCT.yaml  GB-SCT_api_discovery_sweep.md  GB-SCT_variable_summary.md  GB-UKP.yaml  GB-WLS.yaml
docs/mappings/: GB-SCT.md  GB-UKP.md  TEMPLATE.md
etl/mirrors/: compute_deterministic.py  export_formats.py  export_json.py  fetch_holyrood_raw.py
etl/validation/: reconcile_parity.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.css
frontend/static/: site.webmanifest
institutions/GB-SCT/: API_CATALOG.md  AUDIT_BLUEPRINT.yaml  AUDIT_SUMMARY.md  MISSINGNESS_MATRIX.md  PARITY_REPORT.md  README.md  TRANSFORMATION_RULES.md
(+17 files in other folders)
